--- a/DrivingApp/res/layout/activity_mainscreen.xml
+++ b/DrivingApp/res/layout/activity_mainscreen.xml
@@ -66,7 +66,7 @@
         android:layout_below="@+id/button3"
         android:text="@string/disable_times" />
 
-    <Button
+    <!--  <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,6 +80,27 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button1"
         android:layout_toRightOf="@+id/button5"
-        android:text="@string/about" />
+        android:text="@string/about" /> -->
+    
+        <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="displaySpeed"
+        android:text="@string/display_speed" />
+    
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="displayLockScreen"
+        android:text="@string/lock_screen" />
+    
+    <TextView
+        android:id="@+id/tvSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" />
 
 </TableLayout>
