--- a/DrivingApp/res/layout/activity_main.xml
+++ b/DrivingApp/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,30 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Switch
-        android:id="@+id/switch2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/switch1"
-        android:text="@string/silenced" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/app_status" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/switch2"
-        android:layout_below="@+id/switch2"
-        android:text="@string/change_pattern" />
-
+    
+  
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -47,40 +25,10 @@
         android:layout_above="@+id/textView1"
         android:layout_alignLeft="@+id/textView1"
         android:onClick="startAccelerometer"
-        android:text="@string/start_accel" />
+        android:text="@string/launch" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_below="@+id/button2"
-        android:text="@string/disable_speed" />
+   
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button3"
-        android:layout_below="@+id/button3"
-        android:text="@string/disable_times" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_alignLeft="@+id/button1"
-        android:text="@string/help" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_toRightOf="@+id/button5"
-        android:text="@string/about" />
-    
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
@@ -98,5 +46,10 @@
         android:layout_toRightOf="@+id/button5"
         android:onClick="displayLockScreen"
         android:text="@string/lock_screen" />
+    
+    
 
-</RelativeLayout>
+
+    
+
+</TableLayout>
