Programatic silencing, lock screen appears when over speed limit, integrated

--- a/DrivingApp/res/layout/activity_options.xml
+++ b/DrivingApp/res/layout/activity_options.xml
@@ -14,9 +14,8 @@
         android:id="@+id/switch_silenced"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/switch1"
-        android:text="@string/silenced" />
+        android:text="@string/silenced"
+        android:onClick="switchSilenced" />
 
     <!--  
     <Switch
