--- a/DrivingApp/res/layout/activity_main.xml
+++ b/DrivingApp/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:text="@string/hello_world" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/app1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
@@ -42,7 +42,7 @@
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
+        android:layout_above="@+id/app1"
         android:layout_toRightOf="@+id/button5"
         android:onClick="displayLockScreen"
         android:text="@string/lock_screen" />
