--- a/DrivingApp/res/layout/activity_mainscreen.xml
+++ b/DrivingApp/res/layout/activity_mainscreen.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity" >
 
     <ImageView
-        android:id="@+id/imageView_launch_logo"
+        android:id="@+id/firstImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/ic_launcher"
@@ -24,7 +24,7 @@
         android:text="@string/hello_world" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/app1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
