--- a/DrivingApp/res/layout/main.xml
+++ b/DrivingApp/res/layout/main.xml
@@ -1,141 +1,151 @@
+<?xml version="1.0" encoding="utf-8"?>	
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"	
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+	<LinearLayout
+	    android:id="@+id/clockWidgetLocation"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+	</LinearLayout>
+    
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" >
+		<ImageView
+		    android:id="@+id/firstIcon"
+		    android:layout_width="48dp"
+		    android:layout_height="48dp"
+		    android:visibility="visible"
+		    android:contentDescription="@string/phoneIcon" />
+		<Button
+		    android:id="@+id/firstButton"
+		    android:layout_width="200dp"
+		    android:layout_height="60dp"
+		    android:onClick="openApp"
+		    android:text="@string/phone" />
+	</LinearLayout>
+	
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" >
+		<ImageView
+			android:id="@+id/secondIcon"
+		    android:layout_width="48dp"
+		    android:layout_height="48dp"
+		    android:visibility="visible"
+		    android:contentDescription="@string/secondIcon" />
+		<Button
+		    android:id="@+id/secondButton"
+		    android:layout_width="200dp"
+		    android:layout_height="60dp"
+		    android:onClick="openApp" /> 
+	</LinearLayout>
+	
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" >
+		<ImageView
+		    android:id="@+id/thirdIcon"
+		    android:layout_width="48dp"
+		    android:layout_height="48dp"
+		    android:visibility="visible"
+		    android:contentDescription="@string/thirdIcon" />
+		<Button
+		    android:id="@+id/thirdButton"
+		    android:layout_width="200dp"
+		    android:layout_height="60dp"
+		    android:onClick="openApp" />	
+	</LinearLayout>
+	
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" >
+		<ImageView
+		    android:id="@+id/fourthIcon"
+		    android:layout_width="48dp"
+		    android:layout_height="48dp"
+		    android:visibility="visible"
+		    android:contentDescription="@string/fourthIcon" />
+		<Button
+		    android:id="@+id/fourthButton"
+		    android:layout_width="200dp"
+		    android:layout_height="60dp"
+		    android:onClick="openApp" />
+	</LinearLayout>
+	     
+	<LinearLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="25dp"
+		android:gravity="center" >
+	    
+	</LinearLayout>
+	
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center" >
+		<Button
+		    android:id="@+id/exitButton"
+		    android:layout_width="250dp"
+		    android:layout_height="60dp"
+		    android:onClick="exitLockScreen"
+		    android:text="@string/exit_screen" />
+	</LinearLayout>
+</LinearLayout>
+		
+		
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/mycolor1"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-	android:background="@color/mycolor1"
-    android:orientation="vertical"
-     >
+    android:paddingTop="@dimen/activity_vertical_margin" >-->
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+    <!--<RelativeLayout
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" >
 
-         <ImageView
-            android:id="@+id/droid"
-			android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/droidupdated" /> 
-    </RelativeLayout>
+	<ImageView
+		android:id="@+id/droid"
+		android:visibility="invisible"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/droidupdated" /> 
+	</RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/homelinearlayout">
+	<LinearLayout
+		android:id="@+id/homelinearlayout"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true" >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/homeupdated"
-            android:visibility="invisible"
-            android:id="@+id/home"
-            />
-    </LinearLayout>
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/homeupdated"
+		android:visibility="invisible"
+		android:id="@+id/home" />
+	</LinearLayout>
     
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"/>
- 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-        
-	    <Button
-	        android:id="@+id/firstButton"
-	        android:layout_width="150dp"
-	        android:layout_height="80dp"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerInParent="true"
-	        android:layout_marginTop="100dp"
-	        android:onClick="openApp"
-	        android:text="@string/phone" />
-	    
-	    <ImageView
-	        android:id="@+id/firstIcon"
-	        android:layout_width="150dp"
-	        android:layout_height="60dp"
-	        android:layout_alignParentTop="true"
-	        android:layout_marginTop="110dp"
-	        android:layout_marginLeft="20dp"
-	        android:layout_toLeftOf="@id/firstButton"
-	        android:visibility="visible"
-	    />
-	    
-	    <Button
-	        android:id="@+id/secondButton"
-	        android:layout_width="150dp"
-	        android:layout_height="80dp"
-	        android:layout_below="@+id/firstButton"
-	        android:layout_centerInParent="true"
-	        android:onClick="openApp" />
-	        
-	   	<ImageView
-	        android:id="@+id/secondIcon"
-	        android:layout_width="150dp"
-	        android:layout_height="60dp"
-	        android:layout_toLeftOf="@id/secondButton"
-	        android:layout_below="@+id/firstButton"
-	        android:layout_marginTop="10dp"
-	        android:layout_marginLeft="20dp"
-	        android:visibility="visible"
-	    />
-	   	
-	    <Button
-	        android:id="@+id/thirdButton"
-	        android:layout_width="150dp"
-	        android:layout_height="80dp"
-	        android:layout_below="@+id/secondButton"
-	        android:layout_centerInParent="true"
-	        android:onClick="openApp" />
-	    
-	    <ImageView
-	        android:id="@+id/thirdIcon"
-	        android:layout_width="150dp"
-	        android:layout_height="60dp"
-	        android:layout_below="@+id/secondButton"
-	        android:layout_toLeftOf="@id/thirdButton"
-	        android:layout_marginTop="10dp"
-	        android:layout_marginLeft="20dp"
-	        android:visibility="visible"
-	    />
-	    
-	    <Button
-	        android:id="@+id/fourthButton"
-	        android:layout_width="150dp"
-	        android:layout_height="80dp"
-	        android:layout_below ="@+id/thirdButton"
-	        android:layout_centerInParent="true"
-	        android:onClick="openApp" />
-	    
-	    <ImageView
-	        android:id="@+id/fourthIcon"
-	        android:layout_width="150dp"
-	        android:layout_height="60dp"
-	        android:layout_below="@+id/thirdButton"
-	        android:layout_toLeftOf="@id/fourthButton"
-	        android:layout_marginTop="10dp"
-	        android:layout_marginLeft="20dp"
-	        android:visibility="visible"
-	    />
-	                
-	    <Button
-	        android:id="@+id/exitButton"
-	        android:layout_width="150dp"
-	        android:layout_height="80dp"
-	        android:layout_below="@+id/fourthButton"
-	        android:layout_centerInParent="true"
-	        android:onClick="exitLockScreen"
-	        android:text="@string/exit_screen" />
-	    
-	    </RelativeLayout>
-
-</RelativeLayout>
+        android:layout_alignParentTop="true"/>-->
