--- a/DrivingApp/res/layout/activity_music.xml
+++ b/DrivingApp/res/layout/activity_music.xml
@@ -50,5 +50,23 @@
             android:layout_below="@+id/ivAmazonMp3"
             android:layout_marginTop="25dp"
             android:src="@drawable/droid" />
+                
+       <ImageView
+            android:id="@+id/ivSoundCloud"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignLeft="@+id/ivGooglePlayMusic"
+            android:layout_below="@+id/ivGooglePlayMusic"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/droid" />
+                
+      <ImageView
+            android:id="@+id/ivIHeartRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignLeft="@+id/ivSoundCloud"
+            android:layout_below="@+id/ivSoundCloud"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/droid" />
 
 </RelativeLayout>
