--- a/DrivingApp/res/layout/activity_navigation.xml
+++ b/DrivingApp/res/layout/activity_navigation.xml
@@ -14,5 +14,14 @@
         android:layout_height="40dp"
         android:layout_marginLeft="250dp"
         android:src="@drawable/droid" />
-    
+
+    <ImageView
+        android:id="@+id/ivWaze"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignLeft="@+id/ivMaps"
+        android:layout_below="@+id/ivMaps"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/droid" />
+
 </RelativeLayout>
