--- a/DrivingApp/res/layout/main.xml
+++ b/DrivingApp/res/layout/main.xml
@@ -16,12 +16,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center" >
+
 		<ImageView
 		    android:id="@+id/firstIcon"
 		    android:layout_width="48dp"
 		    android:layout_height="48dp"
-		    android:visibility="visible"
-		    android:contentDescription="@string/phoneIcon" />
+		    android:contentDescription="@string/phoneIcon"
+		    android:src="@drawable/droid"
+		    android:visibility="visible" />
+
 		<Button
 		    android:id="@+id/firstButton"
 		    android:layout_width="200dp"
@@ -35,12 +38,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center" >
+
 		<ImageView
-			android:id="@+id/secondIcon"
+		    android:id="@+id/secondIcon"
 		    android:layout_width="48dp"
 		    android:layout_height="48dp"
-		    android:visibility="visible"
-		    android:contentDescription="@string/secondIcon" />
+		    android:contentDescription="@string/secondIcon"
+		    android:src="@drawable/droid"
+		    android:visibility="visible" />
+
 		<Button
 		    android:id="@+id/secondButton"
 		    android:layout_width="200dp"
@@ -53,12 +59,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center" >
+
 		<ImageView
 		    android:id="@+id/thirdIcon"
 		    android:layout_width="48dp"
 		    android:layout_height="48dp"
-		    android:visibility="visible"
-		    android:contentDescription="@string/thirdIcon" />
+		    android:contentDescription="@string/thirdIcon"
+		    android:src="@drawable/droid"
+		    android:visibility="visible" />
+
 		<Button
 		    android:id="@+id/thirdButton"
 		    android:layout_width="200dp"
@@ -71,12 +80,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center" >
+
 		<ImageView
 		    android:id="@+id/fourthIcon"
 		    android:layout_width="48dp"
 		    android:layout_height="48dp"
-		    android:visibility="visible"
-		    android:contentDescription="@string/fourthIcon" />
+		    android:contentDescription="@string/fourthIcon"
+		    android:src="@drawable/droid"
+		    android:visibility="visible" />
+
 		<Button
 		    android:id="@+id/fourthButton"
 		    android:layout_width="200dp"
