--- a/DrivingApp/res/values/strings_activity_speed_adjustment.xml
+++ b/DrivingApp/res/values/strings_activity_speed_adjustment.xml
@@ -53,5 +53,6 @@
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="readAccel">Read Accelerometer</string>
 
 </resources>
